<resources>
    <string name="app_name">Heisenburg</string>
    <string name="success">Login Successful, </string>
    <string name="name">Enter Name</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="enter_username">Enter Username</string>
    <string name="enter_password">Enter Password</string>
    <string name="register">Register</string>
    <string name="or">OR</string>
    <string name="forgot_password">Forgot Password?</string>
</resources>