<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity">

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/logoR"
        android:layout_width="395dp"
        android:layout_height="247dp"
        android:layout_margin="10dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/registerR"
        android:layout_width="166dp"
        android:layout_height="50dp"
        android:text="@string/register"
        android:textColorLink="#00B0FF"
        android:textSize="32sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logoR" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/text_nameR"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/round_button"
        android:backgroundTint="#FFFFFF"
        android:drawableStart="@drawable/ic_baseline_person_24"
        android:drawableTint="#D500F9"
        android:hint="@string/name"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/registerR" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/text_usernameR"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/round_button"
        android:backgroundTint="#FFFFFF"
        android:drawableStart="@drawable/ic_baseline_person_24"
        android:drawableTint="#D500F9"
        android:hint="@string/enter_username"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_nameR" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/text_passwordR"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/round_button"
        android:drawableStart="@drawable/ic_baseline_lock_24"
        android:drawableTint="#D500F9"
        android:hint="@string/enter_password"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_usernameR" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/register_buttonR"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:background="@drawable/round_button"
        android:text="@string/register"
        app:backgroundTint="@color/purple_200"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_passwordR"
        app:layout_constraintVertical_bias="0.307" />

</androidx.constraintlayout.widget.ConstraintLayout>